Fix code growing off screen

--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -18,14 +18,24 @@ body {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.field {
+.main {
   width: 100%;
+}
+
+.field.field {
+  width: 100%;
+  margin: 5px;
 }
 
 .card {
   padding: 1em;
   margin: auto;
   max-width: 600px;
+  display: flex;
+  flex-flow: column nowrap;
+  & > * {
+    margin: 5px;
+  }
 }
 
 .actions {
@@ -52,6 +62,7 @@ code {
   max-width: 550px;
   overflow-x: auto;
   white-space: nowrap;
+  max-width: 80vw;
 }
 
 .full-width {
@@ -60,4 +71,9 @@ code {
 
 .container {
   max-width: 700px;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 10px !important;
 }
